--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -4,13 +4,18 @@
   height: 580px;
 }
 
-@media (max-width: 1728px) {
+@media (min-width: 1920px) {
   .iframe {
-    /* height: 480px; */
-    /* width: 100%; */
+    height: 950px;
   }
 }
 
+@media (max-width: 1728px) {
+  .iframe {
+    /* height: 480px;
+    width: 100%; */
+  }
+}
 
 @media (max-width: 768px) {
   .iframe {
